display alert absolutely over page (prevents overflow and not worried about content / view being obstructed because the alert fades away anyway)

--- a/api/public/stylesheets/style.css
+++ b/api/public/stylesheets/style.css
@@ -117,8 +117,10 @@ form select {
 }
 
 .alert {
-  max-width: 100%;
-  margin: auto;
+  position: absolute;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
   padding: 15px;
   display: flex;
   align-items: center;
